@@ -19,6 +19,8 @@ sub is_banned {
     my $c              = shift;
     my $ban_min_strike = shift;
 
+    return undef if $c->is_whitelisted;
+
     my @banned = Lstu::DB::SQLite::Ban->select('WHERE ip = ? AND until > ? AND strike >= ?', $c->ip, time, $ban_min_strike);
 
     if (scalar @banned) {
