@@ -96,6 +96,14 @@
     # optional, default is 3
     #ban_min_strike    => 3,
 
+    # Ban whitelist
+    # You can whitelist IP addresses to prevent you from being banned
+    # Be careful, the IP addresses are compared as string, not as IP addresses
+    # a network range will not work
+    # Example of valid input: ban_whitelist => ['198.51.100.42', '2001:0DB8::42'],¬
+    # optional, default is an empty array
+    #ban_whitelist => [],
+
     # define an URL to the Piwik instance and the ID of a website to track
     # set if you want to track views in Piwik
     # optional, Piwik tracking is disabled by default
